# learn_greek

./: .gitignore  README.md  dev.sh
.claude/hooks/: auto-format.sh
.claude/skills/backend-lint/: SKILL.md
.claude/skills/format/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/preflight/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/typecheck/: SKILL.md
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  dependabot-automerge.yml  deploy-frontend.yml  frontend-ci.yml
backend/: dev.db  main.py  pyproject.toml
backend/src/: config.py  database.py  models.py  schemas.py
backend/src/routers/: flashcards.py  sessions.py
backend/tests/: conftest.py  test_flashcards.py  test_sessions.py
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/.husky/: pre-commit
frontend/app/: env.d.ts  routeTree.gen.ts  server.ts
frontend/app/components/Conversation/: Conversation.tsx
frontend/app/components/Flashcards/: Flashcards.tsx
frontend/app/hooks/: useFlashcards.ts  useProgress.ts
frontend/app/lib/: levels.ts
frontend/app/routes/: __root.tsx  conversation.tsx  flashcards.tsx  index.tsx  practice.tsx  progress.tsx  reading.tsx
frontend/app/server-fns/: chat.ts  practice.ts  reading.ts
frontend/app/types/: index.ts
frontend/src/: App.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/pages/: ConversationPage.tsx  FlashcardsPage.tsx  HomePage.tsx  PracticePage.tsx  ReadingPage.tsx
frontend/src/types/: index.ts
(+12 files in other folders)
